[gd_scene load_steps=5 format=3 uid="uid://rcj3qujisx6f"]

[ext_resource type="Texture2D" uid="uid://dot3y5xqlq8gk" path="res://art/Main_menu/background.png" id="1_3isf7"]
[ext_resource type="FontFile" uid="uid://d4dc84pifcc58" path="res://Fonts/VT323_font/VT323-Regular.ttf" id="2_oghsy"]
[ext_resource type="Script" path="res://Scenes/Scripts/ConfirmBtn.gd" id="3_tub8y"]
[ext_resource type="Script" path="res://Scenes/Scripts/BackBtn.gd" id="4_3xcng"]

[node name="JoinLobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(861, 453)
scale = Vector2(0.680645, 0.680645)
texture = ExtResource("1_3isf7")

[node name="Label" type="Label" parent="Sprite2D"]
z_index = 1
offset_left = -201.28
offset_top = -248.294
offset_right = 410.72
offset_bottom = -158.294
scale = Vector2(0.25, 0.25)
theme_override_fonts/font = ExtResource("2_oghsy")
theme_override_font_sizes/font_size = 90
text = "Enter Lobby Code:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ConfirmBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 798.0
offset_top = 328.0
offset_right = 869.0
offset_bottom = 359.0
scale = Vector2(0.5, 0.5)
text = "Confirm"
script = ExtResource("3_tub8y")

[node name="BackBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 613.0
offset_top = 259.0
offset_right = 658.0
offset_bottom = 290.0
scale = Vector2(0.5, 0.5)
text = "Back"
script = ExtResource("4_3xcng")

[node name="CodeTF" type="LineEdit" parent="BackBtn"]
layout_mode = 2
offset_left = 214.0
offset_top = 138.0
offset_right = 362.0
offset_bottom = 169.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(774.39, 347.682)
scale = Vector2(0.170161, 0.170161)

[node name="no_lobby_found_lbl" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 749.0
offset_top = 348.0
offset_right = 1253.0
offset_bottom = 438.0
scale = Vector2(0.1, 0.1)
theme_override_colors/font_color = Color(0.560784, 0.560784, 0.576471, 1)
theme_override_fonts/font = ExtResource("2_oghsy")
theme_override_font_sizes/font_size = 90
text = "No lobby found"

[node name="lobby_full_lbl" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 749.0
offset_top = 348.0
offset_right = 1253.0
offset_bottom = 438.0
scale = Vector2(0.1, 0.1)
theme_override_colors/font_color = Color(0.560784, 0.560784, 0.576471, 1)
theme_override_fonts/font = ExtResource("2_oghsy")
theme_override_font_sizes/font_size = 90
text = "Lobby is full
"

[connection signal="pressed" from="ConfirmBtn" to="ConfirmBtn" method="_on_pressed"]
[connection signal="pressed" from="BackBtn" to="BackBtn" method="_on_pressed"]
